fix: npxを使用してCIを実行を安定化

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,7 @@ jobs:
 
       - name: HTML Lint (構文チェック)
         # htmlhintというツールを使って、index.htmlにミスがないか調べる
-        run: |
-          npm install -g htmlhint
-          htmlhint index.html
+        run: npx htmlhint index.html
 
   # --- 【出荷工程：CD】 ---
   deploy:
