--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,33 +5,26 @@ on:
     branches: [ main ]
 
 jobs:
-  # --- 【検品工程：CI】 ---
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: HTML Lint (構文チェック)
-        # htmlhintというツールを使って、index.htmlにミスがないか調べる
+      - name: HTML Lint
         run: npx htmlhint index.html
 
-  # --- 【出荷工程：CD】 ---
   deploy:
-    # 👈 ここがポイント！testジョブが成功しない限り、このdeployは絶対に起動しない
     needs: test 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Deploy to EC2
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.EC2_IP }} # セキュリティ向上のためIPもSecret推奨
+          host: ${{ secrets.EC2_IP }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           source: "index.html"
           target: "/home/ubuntu/todo-app/"
-
       - name: Update Web Server
         uses: appleboy/ssh-action@master
         with:
