--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
       - name: Deploy to EC2
         uses: appleboy/scp-action@master
         with:
@@ -25,6 +26,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           source: "index.html"
           target: "/home/ubuntu/todo-app/"
+
       - name: Update Web Server
         uses: appleboy/ssh-action@master
         with:
@@ -33,3 +35,15 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             sudo cp /home/ubuntu/todo-app/index.html /var/www/html/index.html
+
+      - name: Slack Notification
+        if: always()
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_TITLE: 'Deployment Report'
+          SLACK_MESSAGE: |
+            Status: ${{ job.status }}
+            Commit: ${{ github.event.head_commit.message }}
+          SLACK_COLOR: ${{ job.status == 'success' && '#36a64f' || '#ff0000' }}
+          SLACK_USERNAME: 'GitHub Actions Bot'
